fix: format savings range as $40K-$150K for clarity

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
       <span class="label">time compression<br>on routine tasks</span>
     </div>
     <div class="hero-stat">
-      <span class="num">$40-150K</span>
+      <span class="num">$40K-$150K</span>
       <span class="label">annual savings<br>per engagement</span>
     </div>
   </div>
